force-app/main/default/objects/ZIP_Master__c/ZIP_Master__c.object-meta.xml
<CustomObject>
    <label>ZIP Master</label>
    <nameField>
        <label>ZIP Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZIP Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>