force-app/main/default/objects/ZIP_Master__c/fields/AQMD_District__c.field-meta.xml
<CustomField>
    <fullName>AQMD_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQMD District related to zip code</description>
    <label>AQMD District</label>
    <referenceTo>AQMD_District__c</referenceTo>
    <relationshipLabel>ZIP Master</relationshipLabel>
    <relationshipName>ZIP_Master</relationshipName>
    <type>Lookup</type>
</CustomField>