force-app/main/default/objects/ZIP_Master__c/fields/Business_Dev_Area__c.field-meta.xml
<CustomField>
    <fullName>Business_Dev_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Sales Regions and Areas</description>
    <label>Business Dev Area ID</label>
    <referenceTo>Sales_Market_Areas__c</referenceTo>
    <relationshipLabel>ZIP Master</relationshipLabel>
    <relationshipName>ZIP_Master</relationshipName>
    <type>Lookup</type>
</CustomField>