force-app/main/default/objects/ZIP_Master__c/fields/Business_Dev_Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Dev_Area_Name__c</fullName>
    <formula>Business_Dev_Area__r.Business_Dev_Area_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Dev Area Name</label>
    <type>Text</type>
</CustomField>