force-app/main/default/objects/ZIP_Master__c/fields/Business_Dev_Region_name__c.field-meta.xml
<CustomField>
    <fullName>Business_Dev_Region_name__c</fullName>
    <formula>text(Business_Dev_Area__r.Business_Dev_Region_name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Dev Region Name</label>
    <type>Text</type>
</CustomField>