force-app/main/default/objects/ZIP_Master__c/fields/CHES_District__c.field-meta.xml
<CustomField>
    <fullName>CHES_District__c</fullName>
    <label>CHES District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>