force-app/main/default/objects/ZIP_Master__c/fields/CHES_Region__c.field-meta.xml
<CustomField>
    <fullName>CHES_Region__c</fullName>
    <label>CHES Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>