force-app/main/default/objects/ZIP_Master__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Zip codes primary city</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>