force-app/main/default/objects/ZIP_Master__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>15</length>
    <type>Text</type>
</CustomField>