force-app/main/default/objects/ZIP_Master__c/fields/Distribution_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Center_Code__c</fullName>
    <label>Ecommerce Distribution Center Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>