force-app/main/default/objects/ZIP_Master__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Latitude and Longitude of the zip code</description>
    <label>Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>