force-app/main/default/objects/ZIP_Master__c/fields/MapAnything_Lattitude__c.field-meta.xml
<CustomField>
    <fullName>MapAnything_Lattitude__c</fullName>
    <label>MapAnything Lattitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>