force-app/main/default/objects/ZIP_Master__c/fields/MapAnything_Longitude__c.field-meta.xml
<CustomField>
    <fullName>MapAnything_Longitude__c</fullName>
    <label>MapAnything Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>