force-app/main/default/objects/ZIP_Master__c/fields/slsops_temp_Oil_Gallons__c.field-meta.xml
<CustomField>
    <fullName>slsops_temp_Oil_Gallons__c</fullName>
    <description>Oil gallons collected used for analysis purposes</description>
    <label>slsops temp Oil Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>