force-app/main/default/objects/ZIP_Master__c/fields/slsops_temp_Revenue__c.field-meta.xml
<CustomField>
    <fullName>slsops_temp_Revenue__c</fullName>
    <description>Use for sales ops analysis</description>
    <label>slsops temp Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>