force-app/main/default/objects/ZIP_Master__c/fields/slsops_temp_Territory__c.field-meta.xml
<CustomField>
    <fullName>slsops_temp_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>field used to map territories for territory master, used and then discarded</description>
    <label>slsops temp Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>ZIP Master</relationshipLabel>
    <relationshipName>ZIP_Master</relationshipName>
    <type>Lookup</type>
</CustomField>