force-app/main/default/objects/ZIP_Master__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>US States</description>
    <label>State</label>
    <length>15</length>
    <type>Text</type>
</CustomField>