force-app/main/default/objects/ZIP_Master__c/fields/Territory_Tag__c.field-meta.xml
<CustomField>
    <fullName>Territory_Tag__c</fullName>
    <label>Territory Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>