force-app/main/default/objects/ZIP_Master__c/fields/Zip_FSA__c.field-meta.xml
<CustomField>
    <fullName>Zip_FSA__c</fullName>
    <formula>if( Country__c = &quot;US&quot;,  ZIP__c , left(ZIP__c,3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip FSA</label>
    <type>Text</type>
</CustomField>