force-app/main/default/objects/ZIP_Master__c/fields/Zip_Tag__c.field-meta.xml
<CustomField>
    <fullName>Zip_Tag__c</fullName>
    <description>Field used to tag a zip for updates</description>
    <label>Zip Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>